temp/objects/START_Rating_Tool__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Captive Insurer, Insurance Company, Risk Retention Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>START Rating Tool</relationshipLabel>
        <relationshipName>START_Rating_Tool</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_Loss__c</fullName>
        <label>Cause of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cause_of_Loss</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Reported_Basis__c</fullName>
        <label>Claims Reported Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claims_Reported_Basis</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification_Codes__c</fullName>
        <label>Classification Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Classification_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deductible_Factor__c</fullName>
        <label>Deductible Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exposure_Base__c</fullName>
        <label>Exposure Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exposure_Base</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factors</label>
        <referenceTo>Factors__c</referenceTo>
        <relationshipLabel>START Rating Tool</relationshipLabel>
        <relationshipName>START_Rating_Tool</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Increased_Limits_Factors__c</fullName>
        <label>Increased Limits Factors</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Group__c</fullName>
        <label>Industry Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mercantile (10000 to 19999)</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous (40000 to 49999)</fullName>
                </value>
                <value>
                    <fullName>Manufacturing or Processing (Codes 50000 to 59999)</fullName>
                </value>
                <value>
                    <fullName>Building or Premises—office or space leased to others (60000 to 69999)</fullName>
                </value>
                <value>
                    <fullName>Contracting or Servicing (90000 to 99999)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Class__c</fullName>
        <label>Major Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Major_Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Premium__c</fullName>
        <label>Minimum Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCCI_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCCI Code</label>
        <referenceTo>NCCI_Code__c</referenceTo>
        <relationshipLabel>START Rating Tool</relationshipLabel>
        <relationshipName>START_Rating_Tool</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCCI_Description__c</fullName>
        <formula>NCCI_Code__r.NCCI_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCCI Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Brand_Name__c</fullName>
        <label>Product Brand Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctors Claims Made</fullName>
                </value>
                <value>
                    <fullName>Doctors Occurrence Basis</fullName>
                </value>
                <value>
                    <fullName>Fortress Claims Made</fullName>
                </value>
                <value>
                    <fullName>Fortress Occurrence Basis</fullName>
                </value>
                <value>
                    <fullName>Nat Union Claims Made</fullName>
                </value>
                <value>
                    <fullName>Nat Union Occurrence Basis</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>OMNIC New to Company NTC-APP</fullName>
                </value>
                <value>
                    <fullName>OMNIC OMS Claims Made</fullName>
                </value>
                <value>
                    <fullName>PIC Claims Made</fullName>
                </value>
                <value>
                    <fullName>TDIC Claims Made</fullName>
                </value>
                <value>
                    <fullName>TDIC Occurrence Basis</fullName>
                </value>
                <value>
                    <fullName>Business Travel Accident (BTA)</fullName>
                </value>
                <value>
                    <fullName>Kidnap, Ransom &amp; Extortion (KRE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Concentration__c</fullName>
        <label>Professional Concentration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Professional_Concentration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Source__c</fullName>
        <label>Rating Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Credit__c</fullName>
        <inlineHelpText>A schedule credit up to this % may be applied based on the underwriter&apos;s judgment. The
purpose of this credit is to recognize risk characteristics that are not reflected in the otherwise
applicable premium. The underwriter should consider the following in determining whether
to apply a schedule credit:
a. The historical loss experience of the applicant;
b. Claim anomalies in the historical loss experience;
c. The cumulative number of years of patient experience;
d. Management control procedures.</inlineHelpText>
        <label>Schedule Credit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Help__c</fullName>
        <label>Show Help</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_State_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subclass__c</fullName>
        <label>Subclass</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Major_Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Subclass</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loss_cost_multiplier__c</fullName>
        <label>Loss Cost Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>START Rating Tool</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Carrier__c</columns>
        <columns>Claims_Reported_Basis__c</columns>
        <columns>Classification_Codes__c</columns>
        <columns>Description__c</columns>
        <columns>Exposure_Base__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ISO_Rating_Tool</fullName>
        <columns>NAME</columns>
        <columns>Carrier__c</columns>
        <columns>Classification_Codes__c</columns>
        <columns>Major_Class__c</columns>
        <columns>Subclass__c</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rating_Source__c</field>
            <operation>equals</operation>
            <value>ISO</value>
        </filters>
        <label>ISO Rating Tool</label>
    </listViews>
    <listViews>
        <fullName>ISO_Test_Rate_Target</fullName>
        <columns>NAME</columns>
        <columns>Rate__c</columns>
        <columns>Rating_Source__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Increased_Limits_Factors__c</columns>
        <columns>loss_cost_multiplier__c</columns>
        <columns>Minimum_Premium__c</columns>
        <columns>Deductible_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ISO Test</value>
        </filters>
        <label>ISO Test Rate Target</label>
    </listViews>
    <listViews>
        <fullName>NCCI_Rating_Tool</fullName>
        <columns>NAME</columns>
        <columns>Carrier__c</columns>
        <columns>Subclass__c</columns>
        <columns>NCCI_Description__c</columns>
        <columns>State__c</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Rating_Source__c</field>
            <operation>equals</operation>
            <value>NCCI</value>
        </filters>
        <label>NCCI Rating Tool</label>
    </listViews>
    <listViews>
        <fullName>SMARRT_N2G_Rating_Manual</fullName>
        <columns>NAME</columns>
        <columns>Carrier__c</columns>
        <columns>Subclass__c</columns>
        <columns>Factors__c</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <columns>loss_cost_multiplier__c</columns>
        <columns>Increased_Limits_Factors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>contains</operation>
            <value>Harley,Nationwide,generali,scott</value>
        </filters>
        <label>SMARRT N2G Rating Manual</label>
    </listViews>
    <listViews>
        <fullName>SMARRT_Rating_Manual</fullName>
        <columns>Carrier__c</columns>
        <columns>NAME</columns>
        <columns>Subclass__c</columns>
        <columns>State__c</columns>
        <columns>Classification_Codes__c</columns>
        <columns>Claims_Reported_Basis__c</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <columns>loss_cost_multiplier__c</columns>
        <columns>Increased_Limits_Factors__c</columns>
        <columns>Deductible_Factor__c</columns>
        <columns>Schedule_Credit__c</columns>
        <filterScope>Everything</filterScope>
        <label>SMARRT Rating Manual</label>
    </listViews>
    <listViews>
        <fullName>SMARRT_Rating_Manual_CGL</fullName>
        <columns>Carrier__c</columns>
        <columns>NAME</columns>
        <columns>Subclass__c</columns>
        <columns>State__c</columns>
        <columns>Classification_Codes__c</columns>
        <columns>Claims_Reported_Basis__c</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <columns>loss_cost_multiplier__c</columns>
        <columns>Increased_Limits_Factors__c</columns>
        <columns>Deductible_Factor__c</columns>
        <columns>Schedule_Credit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subclass__c</field>
            <operation>equals</operation>
            <value>General Liability</value>
        </filters>
        <label>SMARRT Rating Manual CGL</label>
    </listViews>
    <nameField>
        <label>START Rating Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>START Rating Tool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>